--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
             <version>8.2.0.v20160908</version>
         </dependency>
         <!-- rest api end-->
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
     </dependencies>
 
     <build>
